Optimize boolean creation